Fix for hidden avatars in comments on small screens 883

--- a/src/components/Comments/Comment.less
+++ b/src/components/Comments/Comment.less
@@ -52,7 +52,11 @@
     top: -4px;
     width: 100%;
     margin-left: 12px;
-    overflow: hidden;
+    overflow: unset;
+
+    @media @small {
+      overflow: hidden;
+    }
 
     & > a {
       font-weight: bold;
